--- a/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/password-rescue/password-rescue.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/password-rescue/password-rescue.component.html
@@ -17,7 +17,7 @@
           <input formControlName="email" name="email" class="email" type="text" placeholder="@Email" required>
           <span class="text-danger" *ngIf="controlEmail(); let message">{{message}}</span>
 
-          <button id="bouton-connexion" class="bouton-connexion" type="submit" [disabled]="form1.invalid" >ENVOYER</button>
+          <button id="bouton-connexion" class="bouton-animation" type="submit" [disabled]="form1.invalid" >ENVOYER</button>
         </form>
     </div>
  </section>
