--- a/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/sign-in/sign-in.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/sign-in/sign-in.component.html
@@ -52,7 +52,7 @@
                 <label class="label" >J'accepte de recevoir des annonces.</label>
             </div>
 
-            <button id ="bt_signin_submit" class="bouton-inscription" type="submit" [disabled]="form1.invalid" >S'INSCRIRE</button>
+            <button id ="bt_signin_submit" class="bouton-animation" type="submit" [disabled]="form1.invalid" >S'INSCRIRE</button>
             <p *ngIf="form1.invalid" class="avertissement-inscription">* Veuillez remplir tous les champs pour valider votre inscription.</p>
         </form>
     </div>
