--- a/angularProject/nogashiFront/src/app/components/modules/comments/comments.component.html
+++ b/angularProject/nogashiFront/src/app/components/modules/comments/comments.component.html
@@ -7,10 +7,10 @@
       <div class="bloc-titre-commentaires col-12">
         <h2 class="titre-commentaires"><i class="far fa-comment"></i> / Commentaires :</h2>
         <div class="bloc-validation-commentaire col-5">
-          <p class="texte-validation">Votre message à bien été envoyé</p>
+          <p class="texte-validation">Votre commentaire à bien été envoyé.</p>
         </div>
         <div class="bloc-textarea">
-          <textarea class="textarea col-8" >Ecrivez votre commentaire ici</textarea>
+          <textarea class="textarea col-8" >Ecrivez votre commentaire ici...</textarea>
           <div class="bloc-envoyer">
             <a href=""><div id ="bouton-envoyer" class="bouton-envoyer">ENVOYER</div></a>
           </div>
