--- a/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/email-validation/email-validation.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/email-validation/email-validation.component.html
@@ -3,29 +3,29 @@
 <div class="header_space"></div>
 
 <div *ngIf="!haveCkeckToken; else divHaveCkeckToken" >
-  <p>Veuilliez patienter nous interrogons le server</p>
+  <p>Veuillez patienter, nous interrogeons le serveur...</p>
 </div>
 
 <ng-template #divHaveCkeckToken >
 
     <div *ngIf="token==null; else divToken" >
-      <p>Ce lien n'est pas valide pour confirmer votre email.</p>
+      <p>Veuillez patienter, nous interrogeons le serveur...</p>
     </div>
 
     <ng-template #divToken >
       <div *ngIf="!haveRet; else divRet" >
-        <p>Veuilliez patienter nous interrogons le server</p>
+        <p>Veuillez patienter, nous interrogeons le serveur...</p>
       </div>
 
       <ng-template #divRet >
         <div>
           <div *ngIf="!isValidate; else divValidate" >
-            <p>Ce lien n'est pas valide pour confirmer votre email. <br>Auriez-vous déjà éffectué cette opération auparavant ? auquel cas, il n'est plus nécessaire de le faire.<br>Auriez-vous reçu un mail plus récent ? si oui, utiliser alors son lien. <br>Sinon, vous pouvez <a class="nav-link" routerLink="/login" >vous connecter</a> et demander l'envois d'un nouvel email de validation.<br></p>
+            <p>Nous sommes désolés, le lien pour valider votre adresse e-mail n'est pas valide.<br>Si vous avez déjà validé votre adresse e-mail auparavant, il n'est plus nécessaire de le faire.<br>Si vous avez reçu un e-mail plus récent, veuillez utiliser le lien de validation contenu dans ce dernier.<br>Sinon, vous pouvez vous <a class="nav-link" routerLink="/login" > connecter</a> et demander l'envoi d'un nouvel e-mail de validation.<br></p>
           </div>
 
           <ng-template #divValidate >
             <div>
-              <p>Votre email est validé.<br>Vous pouvez désormais <a class="nav-link" routerLink="/login" >vous connecter</a> pour accéder à nos services.<br>Bienvenue sur NoGashi.</p>
+              <p>Votre adresse e-mail est validée.<br>Vous pouvez désormais vous <a class="nav-link" routerLink="/login" >connecter</a> à votre compte pour accéder à nos services.<br>Nous vous souhaitons la bienvenue sur NoGashi !</p>
             </div>
           </ng-template>
         </div>
