--- a/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/find-us/find-us.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/find-us/find-us.component.html
@@ -85,17 +85,11 @@
         </div>
         <div class="grand-bloc-association col-6">
           <h4 class="titre-association"><i class="far fa-dot-circle"></i> Les Associations Partenaires</h4>
-          <a href=""><div>
-            <img class="cercle-association" src="css/img/association/tente-des-glaneurs.jpeg" alt="logo de l'association">
-            <p class="nom-association">&#9679; La Tente Des Glaneurs</p>
+            <img class="cercle-association" src="/assets/img/association/tente-des-glaneurs.jpeg" alt="logo de l'association">            <p class="nom-association">&#9679; La Tente Des Glaneurs</p>
           </div></a>
-          <a href=""><div>
-            <img class="cercle-association" src="css/img/association/gaspilleurs.png" alt="logo de l'association">
-            <p class="nom-association">&#9679; Les Gars'pilleurs</p>
+            <img class="cercle-association" src="/assets/img/association/gaspilleurs.png" alt="logo de l'association">            <p class="nom-association">&#9679; Les Gars'pilleurs</p>
           </div></a>
-          <a href=""><div>
-            <img class="cercle-association" src="css/img/association/banque-alimentaire02.png" alt="logo de l'association">
-            <p class="nom-association">&#9679; Banques Alimentaire du Nord</p>
+            <img class="cercle-association" src="/assets/img/association/banque-alimentaire02.png" alt="logo de l'association">            <p class="nom-association">&#9679; Banques Alimentaire du Nord</p>
           </div></a>
           <br>
           <br>
@@ -115,21 +109,15 @@
           <ul class="ul-contact">
             <li class="menu-contact">- 1 Rue Esquermoise, 59800 -</li>
             <li class="menu-contact">- 03.20.30.79.73 -</li>
-            <a href=""><li class="menu-contact2">- nogashis@gmail.com -</li></a>
-          </ul>
+            <a href="not-found"><li class="menu-contact2">- nogashis@gmail.com -</li></a>          </ul>
         </div>
         <h4 class="titre-suivez col-4"><span class="couleur-trait"><i class="fas fa-caret-right"></i></span> Suivez-Nous sur</h4>
         <div class="bloc-suivez  col-12">
           <ul class="ul-suivez">
             <li class="menu-suivez">
-              <p>Twitter</p>
-            </li>
+              <a href="https://twitter.com/?lang=fr"><p>Twitter</p></a>            </li>
             <li class="menu-suivez">
-              <p>Facebook </p>
-            </li>
-            <li class="menu-suivez">
-              <p>Google+</p>
-            </li>
+              <a href="https://fr-fr.facebook.com/"><p>Facebook </p></a>            </li>
           </ul>
         </div>
       </div>
