--- a/angularProject/nogashiFront/src/app/components/pages/pages_common/command-confirmation/command-confirmation.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_common/command-confirmation/command-confirmation.component.html
@@ -21,12 +21,12 @@
       </ul>
 
       <div class="bloc-facture-print col-12">
-        <a href="">
+        <a href="#">
           <div class="print">
             <i class="fas fa-print"></i>
           </div>
         </a>
-        <a href="">
+        <a href="#">
           <div class="pdf">
             <i class="far fa-file-pdf"></i>
           </div>
