--- a/angularProject/nogashiFront/src/app/components/pages/pages_common/password-reset/password-reset.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_common/password-reset/password-reset.component.html
@@ -16,7 +16,7 @@
              minlength="15" maxlength="15" required>
       <span id="mdpRegex" class="mdp-regex"></span>
 
-      <label for="confirmation" class="label-formulaire"><i class="fas fa-asterisk"></i> Confirmation Mot de Passe</label>
+      <label for="confirmation" class="label-formulaire"><i class="fas fa-asterisk"></i> Confirmation du mot de passe</label>
       <input id="confirmation" class="confirmation" type="password" name="confirmation" minlength="15" maxlength="15" required>
       <span id="confirmationRegex" class="confirmation-regex"></span>
 
