--- a/angularProject/nogashiFront/src/app/components/pages/pages_common/product-sheet/product-sheet.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_common/product-sheet/product-sheet.component.html
@@ -46,15 +46,15 @@
                 <label for="liste-mois" class="label-formulaire"> Votre produit est disponible ici :</label>
                 <select id="liste-mois" class="liste-mois col-12">
                   <option>Daily Juicery (lille)</option>
-                  <option>daily Juicery (lille)</option>
-                  <option>daily Juicery (lille)</option>
-                  <option>daily Juicery (lille)</option>
-                  <option>daily Juicery (lille)</option>
-                  <option>daily Juicery (lille)</option>
+                  <option>Daily Juicery (lille)</option>
+                  <option>Daily Juicery (lille)</option>
+                  <option>Daily Juicery (lille)</option>
+                  <option>Daily Juicery (lille)</option>
+                  <option>Daily Juicery (lille)</option>
                 </select>
               </div>
               <div class="bloc-quantite-produit col-6">
-                <p class="offre-disponible"><i class="fas fa-asterisk"></i> Offre disponible jusque 19h.</p>
+                <p class="offre-disponible"><i class="fas fa-asterisk"></i> Offre disponible jusqu'à 19h.</p>
               </div>
             </div>
           </div>
