--- a/angularProject/nogashiFront/src/app/components/common/footer/footer.component.html
+++ b/angularProject/nogashiFront/src/app/components/common/footer/footer.component.html
@@ -1,8 +1,44 @@
+<!-- FOOTER -->
 
 
 <footer>
-    <div class="footer">
-        <a href="mentions.html"><P class="lien-mentions">Mentions légales</P></a>
-    </div>  
-    <div class="informations-footer">Site réalisé par Anais Kordek - Olivier Vanhée - Joffrey Chassat - Francis Berthe. Nogashi - Formation Dawan, 2019 </div>  
+  <div class="footer">
+    <div class="container">
+      <div class="row">
+        <div class="bloc-centre-footer col-12">
+          <div class="adresse-footer col-4">
+            <ul class="ul-menu-footer">
+              <li class="titre-footer"><span class="trait-footer">//</span> CONTACTEZ-NOUS</li>
+              <li class="menu-footer"><i class="fas fa-phone"></i> -  03.20.30.79.73</li>
+              <li class="menu-footer"><i class="fas fa-map"></i> - 1 Rue Esquermoise, 59800</li>
+              <a href="#"><li class="menu-footer"><i class="fas fa-envelope"></i> - nogashis@gmail.com</li></a>
+            </ul>
+            <hr>
+          </div>
+          <div class="ul col-4">
+            <ul class="ul-menu-footer">
+              <li class="titre-footer"><span class="trait-footer">//</span> NOTRE CONCEPT</li>
+              <a href="#"><li class="menu-footer2">- Accueil -</li></a>
+              <a href="findUs"><!-- C'est des lasagnes findus ? --><li class="menu-footer2"> - Ou Nous Trouver ? -</li></a>
+              <a href="generalFaq"><!-- Général de Gaulle plutôt. --><li class="menu-footer2">- F.A.Q -</li></a>
+            </ul>
+            <hr>
+          </div>
+          <div class="reseau-footer col-4">
+            <ul class="ul-menu-footer">
+              <li class="titre-footer"><span class="trait-footer">//</span> SUIVEZ-NOUS SUR </li>
+              <a href="https://fr-fr.facebook.com/">
+                <li class="menu-footer2"><i class="fab fa-facebook-square"></i> Facebook</li>
+              </a>
+              <a href="https://twitter.com/?lang=fr"><li class="menu-footer2"><i class="fab fa-twitter-square"></i> Twitter</li></a>
+            </ul>
+            <hr>
+          </div>
+          <div class="trait-footer"></div>
+        </div>
+      </div>
+    </div>
+    <a href="legalNotices"><P class="lien-mentions">- Mentions légales -</P></a>
+  </div>
+  <div class="informations-footer">Site réalisé par <span class="italic-footer">Anaïs Kordek - Olivier Vanhée - Joffrey Chassat - Francis Berthe.</span> Nom App - Formation Dawan, <span class="italic-footer">2019</span></div>
 </footer>
