--- a/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/general-faq/general-faq.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/general-faq/general-faq.component.html
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="row">
       <div class="bloc-faq col-12">
-        <h1 class="titre-faq"><i class="fas fa-question-circle"></i> // F.A.Q Générale</h1>
+        <h1 class="titre-faq"><i class="fas fa-question-circle"></i> // F.A.Q. générale</h1>
         <p class="texte-faq">Etenim si attendere diligenter, existimare vere de omni hac causa volueritis,<br> sic constituetis, iudices, nec descensurum quemquam ad han si attendere. </p>
         <div class="bloc-question col-12">
           <form action="">
@@ -12,11 +12,11 @@
           </form>
 
           <div id="question" class="question col-9">
-            <p class="titre-question"><i class="far fa-circle"></i> Question numero 01 ?</p>
+            <p class="titre-question"><i class="far fa-circle"></i> Can I end my days?</p>
             <i class="fas fa-angle-up"></i>
           </div>
           <div id="reponse" class="reponse col-9">
-            <p class="texte-reponse">Si voluit accusare, pietati tribuo, si iussus est, necessitati, si speravit aliquid, pueritiae.</p>
+            <p class="texte-reponse">No, I still haven't commited and pushed on GitHub (but if someone else than me is seeing this, I probably did now).</p>
           </div>
 
           <div class="question col-9">
@@ -63,8 +63,7 @@
         <div class="bloc-tchat">
           <h2 class="titre-tchat">BESOIN D'UN COMPLEMENT D'INFORMATION ?</h2>
           <p class="texte-tchat">Contactez-nous via le tchat</p>
-          <a href="tchat.html"><div class="bouton-tchat">CONNEXION AU TCHAT <i class="far fa-comment-dots"></i></div></a>
-        </div>
+          <a href="tchat"><div class="bouton-tchat">ACCEDER AU TCHAT <i class="far fa-comment-dots"></i></div></a>        </div>
       </div>
     </div>
   </div>
