--- a/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/password-rescue/password-rescue.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/password-rescue/password-rescue.component.html
@@ -4,7 +4,7 @@
 <section class="section-connexion">
     <div class="bloc-formulaire-connexion">
         <div class="bloc-titre-connexion">
-            <h1 class="titre-connexion">// Demande de modification de Mot de passe</h1>
+            <h1 class="titre-connexion">// Demande de modification de mot de passe</h1>
             <br>
             <br>
             <p class="texte-connexion col-8">Etenim si attendere diligenter, existimare vere de omni hac causa volueritis, sic constituetis, iudices, nec descensurum</p>
