--- a/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/welcome/welcome.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/welcome/welcome.component.html
@@ -111,11 +111,10 @@
         </div> 
       
         <div class="bloc-logo">
-           <img class="logo" src="assets/img/commerce/basilic.png" alt="">  
-           <img class="logo" src="assets/img/commerce/freshway.jpg" alt="">  
-           <img class="logo" src="assets/img/commerce/daily-juicery.png" alt="">  
-           <img class="logo" src="assets/img/commerce/boulangerie-mathieu.jpeg" alt="">  
-        </div>
+           <img class="logo" src="assets/img/commerce/basilic.png" alt="Basilic">
+           <img class="logo" src="assets/img/commerce/freshway.jpg" alt="Freshway">
+           <img class="logo" src="assets/img/commerce/daily-juicery.png" alt="Daily Juicery">
+           <img class="logo" src="assets/img/commerce/boulangerie-mathieu.jpeg" alt="Boulangerie Mathieu">        </div>
      </div>  
    </div>
 </section>
@@ -128,9 +127,8 @@
              <h3 class="titre-trouver">// Ou nous trouver ?</h3>
              <p class="texte-trouver">Raptim igitur properantes ut motus sui rumores  celeritate nimia praevenirent, vigore corporum ac levitate..</p>  
            </div>
-           <a href=""><div class="bouton-savoir-plus">EN SAVOIR +</div></a>
-        </div> 
-      </div>
+           <a href=findUs><div class="bouton-savoir-plus">EN SAVOIR +</div></a>
+        </div>      </div>
    </div>
 </section>  
 
