--- a/angularProject/nogashiFront/src/app/components/pages/pages_common/command-payment/command-payment.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_common/command-payment/command-payment.component.html
@@ -27,8 +27,7 @@
             <p class="texte-transaction">123456789</p>
           </div>
           <div class="bloc-annuler col-12">
-            <a href="accueil-particulier.html"><div id ="bouton-payer" class="bouton-annuler">ANNULER</div></a>
-          </div>
+            <a href="welcome"><div id ="bouton-payer" class="bouton-annuler">ANNULER</div></a>          </div>
           <div class="bloc-securite">
             <p class="texte-transaction2">100% sécurisé <i class="fas fa-lock"></i></p>
             <p class="texte-transaction3">Vos données bancaires sont protegées</p>
@@ -96,8 +95,7 @@
           </form>
 
           <div class="bloc-payer col-12">
-            <a href="confirmation-commande.html"><div id ="bouton-payer" class="bouton-payer">VALIDATION PAIEMENT</div></a>
-          </div>
+            <a href="commandConfirmation"><div id="bouton-payer" class="bouton-payer">VALIDATION PAIEMENT</div></a>          </div>
           <p class="texte-privacy">By making a purchase, you accept the <span class="mot-privacy">Terms of Service</span> and <span class="mot-privacy">Privacy Policy</span>.
             Any subscriptions will automatically renew and your credit card will be
             charged the subscription fee. You can cancel or modify your plan at any
