--- a/angularProject/nogashiFront/src/app/components/pages/pages_common/command-recap/command-recap.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_common/command-recap/command-recap.component.html
@@ -87,8 +87,7 @@
 
       <div class="bloc-bouton-commande col-12">
         <div class="bloc-retour-panier">
-          <a href="panier.html"><div id ="bouton-retour" class="bouton-retour">RETOUR PANIER</div></a>
-        </div>
+          <a href="shoppingCart"><div id ="bouton-retour" class="bouton-retour">PANIER</div></a>        </div>
         <div class="bloc-payer">
           <a href="paiement.html"><div id ="bouton-payer" class="bouton-payer">PAYER</div></a>
         </div>
