--- a/angularProject/nogashiFront/src/app/components/common/header/header.component.html
+++ b/angularProject/nogashiFront/src/app/components/common/header/header.component.html
@@ -30,14 +30,14 @@
         </div>
 
         <div id="bloc-menu" class="bloc-menu col-12">
-             <a href="#"
-                  <div id="bloc-quitter" class="bloc-quitter">
-                      <div class="croix-quitter">
-                            <span class="barre-croix"></span>
-                            <span class="barre-croix2"></span>
-                      </div>
-                  </div>
-             </a>
+             <a href="#">
+          <div id="bloc-quitter" class="bloc-quitter">
+            <div class="croix-quitter">
+              <span class="barre-croix"></span>
+              <span class="barre-croix2"></span>
+            </div>
+          </div>
+          </a>
              <nav>
                 <ul>
 <					<a routerLink="/welcome-merchant" *ngIf="connexionService.getLocalConnectedRole()==='MERCHANT'"><li class="onglet-menu-principal">Accueil</li></a>
