--- a/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/welcome/welcome.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/welcome/welcome.component.html
@@ -109,20 +109,12 @@
         </div>
 
         <div class="bloc-logo">
-<<<<<<< HEAD
            <img class="logo" src="assets/img/commerce/basilic.png" alt="Basilic">
            <img class="logo" src="assets/img/commerce/freshway.jpg" alt="Freshway">
            <img class="logo" src="assets/img/commerce/daily-juicery.png" alt="Daily Juicery">
-           <img class="logo" src="assets/img/commerce/boulangerie-mathieu.jpeg" alt="Boulangerie Mathieu">        </div>
-     </div>  
-=======
-           <img class="logo" src="assets/img/commerce/basilic.png" alt="">
-           <img class="logo" src="assets/img/commerce/freshway.jpg" alt="">
-           <img class="logo" src="assets/img/commerce/daily-juicery.png" alt="">
-           <img class="logo" src="assets/img/commerce/boulangerie-mathieu.jpeg" alt="">
+           <img class="logo" src="assets/img/commerce/boulangerie-mathieu.jpeg" alt="Boulangerie Mathieu">
         </div>
-     </div>
->>>>>>> bbbb9d1561ffcf4d33c7f85639843cf9da747570
+      </div>
    </div>
 </section>
 
@@ -134,14 +126,9 @@
              <h3 class="titre-trouver">// Ou nous trouver ?</h3>
              <p class="texte-trouver">Raptim igitur properantes ut motus sui rumores  celeritate nimia praevenirent, vigore corporum ac levitate..</p>
            </div>
-<<<<<<< HEAD
            <a href=findUs><div class="bouton-savoir-plus">EN SAVOIR +</div></a>
-        </div>      </div>
-=======
-           <a href=""><div class="bouton-savoir-plus">EN SAVOIR +</div></a>
         </div>
       </div>
->>>>>>> bbbb9d1561ffcf4d33c7f85639843cf9da747570
    </div>
 </section>
 
