Modification page FAQ

--- a/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/find-us/find-us.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/find-us/find-us.component.html
@@ -121,9 +121,11 @@
         <div class="bloc-suivez  col-12">
           <ul class="ul-suivez">
             <li class="menu-suivez">
-              <a href="https://twitter.com/?lang=fr"><p>Twitter</p></a>            </li>
+              <a href="https://twitter.com/?lang=fr"><p>Twitter</p></a>
+            </li>
             <li class="menu-suivez">
-              <a href="https://fr-fr.facebook.com/"><p>Facebook </p></a>            </li>
+              <a href="https://fr-fr.facebook.com/"><p>Facebook </p></a>
+            </li>
           </ul>
         </div>
       </div>
