--- a/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/general-faq/general-faq.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/general-faq/general-faq.component.html
@@ -6,10 +6,12 @@
         <h1 class="titre-faq"><i class="fas fa-question-circle"></i> // F.A.Q. générale</h1>
         <p class="texte-faq">Etenim si attendere diligenter, existimare vere de omni hac causa volueritis,<br> sic constituetis, iudices, nec descensurum quemquam ad han si attendere. </p>
         <div class="bloc-question col-12">
-          <form action="">
-            <input class="input-search" type="search" value="Recherchez un texte">
-            <button class="bouton-search"><i class="fas fa-search"></i></button>
-          </form>
+          <div class="bloc-search">
+            <form action="">
+              <input class="input-search" type="search" value="Recherchez un texte">
+              <button class="bouton-search">OK</button>
+            </form>
+          </div>
 
           <div id="question" class="question col-9">
             <p class="titre-question"><i class="far fa-circle"></i> Can I end my days?</p>
