--- a/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/find-us/find-us.component.scss
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/find-us/find-us.component.scss
@@ -347,11 +347,12 @@ h2 {
   text-align: center;
 }
 
-.menu-suivez {
+.menu-z {
   font-family: 'roboto', sans-serif;
   font-size: 0.90em;
   font-weight: 400;
   font-style: italic;
+  text-decoration: none;
   color: var(--couleurBlancCreme);
   padding-top: 10px;
   cursor: pointer;
