--- a/angularProject/nogashiFront/src/app/components/tests/test/test.component.html
+++ b/angularProject/nogashiFront/src/app/components/tests/test/test.component.html
@@ -17,10 +17,13 @@
     <div class="container">
     <div class="row">
         <div class="col-xs-12">
-            
+
         </div>
     </div>
     </div>
+
+    <app-scheduler-week-txt></app-scheduler-week-txt>
+    <app-scheduler-week-vsl></app-scheduler-week-vsl>
 
     <div class="navbar-right">
     <p>Vous êtes connecté depuis {{ secondes }} secondes !</p>
